--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "blossom-client-sdk": "^4.1.0",
     "hono": "^4.9.8",
     "nostr-tools": "^2.17.0",
     "typescript": "^5.9.2",
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@types/node": "^20.19.17",
     "wrangler": "^4.4.0"
   }
 }
